--- a/ex.1/classification dataset folder/ydata_profiling.ipynb
+++ b/ex.1/classification dataset folder/ydata_profiling.ipynb
@@ -70,6 +70,31 @@
     "profile = ProfileReport(df, explorative=True)\n",
     "profile.to_file(\"report.html\")\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Key Insights from Ydata-Profiling Report\n",
+    "1.\tWet Food Consumption (ate_wet_food_pre_tails)\n",
+    "o\tMajority (61%) of pets do not consume wet food (7,947 pets with 0 value).\n",
+    "o\tAbout 39% of pets consume wet food (5,140 pets with 1 value).\n",
+    "o\tThis indicates that dry food is the dominant choice among customers.\n",
+    "2.\tDry Food Brand Preference (dry_food_brand_pre_tails)\n",
+    "o\t87.3% of pets consume a premium dry food brand (11,426 pets with 1 value).\n",
+    "o\tOnly 12.7% do not consume premium dry food (1,661 pets with 0 value).\n",
+    "o\tThis suggests that premium dry food is highly preferred over regular brands.\n",
+    "3.\tPet Life Stage at Order (pet_life_stage_at_order)\n",
+    "o\tMajority of pets (83.4%) belong to group 1 (younger pets).\n",
+    "o\tOnly 16.6% belong to group 2 (senior pets, 7+ years old).\n",
+    "o\tThe business may consider targeting more products for senior pets to increase engagement in this segment.\n",
+    "4.\tTotal Order Calories (total_order_kcal)\n",
+    "o\tAverage order contains 77,910 kcal, but the distribution is highly skewed (some orders contain over 1 million kcal).\n",
+    "o\tMinimum kcal order is 1,481 kcal, while the maximum is 1,077,041 kcal, suggesting some extreme purchasing behaviors.\n",
+    "o\tThere are no missing values, zero values, or negative values, ensuring clean data for further analysis.\n",
+    "o\tPotential next step: Investigate high-calorie orders to understand extreme buyers.\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
