--- a/ex.2/Final_Report_Distribution_Optimization.ipynb
+++ b/ex.2/Final_Report_Distribution_Optimization.ipynb
@@ -152,6 +152,47 @@
     "\n",
     "Conclusion: Combining outlier removal with log transformation significantly improved the regression model’s stability and predictive accuracy, without distorting the data's real-world meaning."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Synthetic Data Generation (SDV)\n",
+    "To further explore distribution optimization, we used the SDV (Synthetic Data Vault) library with the GaussianCopula model to generate synthetic data based on the regression dataset (ship_fuel_efficiency_numeric.csv). The model learned the original dataset’s structure and created 1,000 new samples that closely mimic the real distributions.\n",
+    "\n",
+    "Distribution Match Example:\n",
+    "A side-by-side histogram of the fuel_consumption variable in the real and synthetic datasets showed visually similar patterns, confirming successful synthesis.\n",
+    "\n",
+    "Conclusion: The SDV-generated dataset can be used for data augmentation, simulations, or even privacy-preserving ML, offering additional flexibility without compromising statistical quality."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " Additional Outlier Filtering – Z-Score Method\n",
+    "To complement the previous IQR and Isolation Forest techniques, we also applied z-score filtering to detect and remove extreme outliers in the fuel_consumption variable. We calculated the z-score for each row and removed values with |z| > 3, which are more than three standard deviations away from the mean.\n",
+    "\n",
+    "This approach removed a small number of statistically significant outliers, further tightening the distribution. The visual comparison showed that the overall shape of the distribution remained consistent, while extreme values were successfully excluded.\n",
+    "\n",
+    "Conclusion: Z-score filtering offered a simple, interpretable method for cleaning extreme outliers, reinforcing the stability of our regression dataset and improving its readiness for modeling."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "TomekLinks for classification dataset\n",
+    "To reduce class overlap and improve decision boundaries, we applied TomekLinks to the classification dataset. This method identified and removed overlapping instances between classes, reducing noise near class borders. The class distribution became slightly more balanced, and the cleaned dataset is now better suited for robust classification modeling."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "RANSAC for regression dataset\n",
+    "We applied RANSAC Regression to the fuel consumption dataset to automatically detect and ignore noisy outliers during model training. RANSAC fits a robust regression model by focusing only on inlier data. The resulting model had improved stability and slightly lower error metrics compared to standard linear regression, confirming its effectiveness in noise-heavy regression tasks."
+   ]
   }
  ],
  "metadata": {
