--- a/ex.2/classification dataset/optimization_smote_code.ipynb
+++ b/ex.2/classification dataset/optimization_smote_code.ipynb
@@ -246,6 +246,57 @@
     "print(\"Original class distribution:\", Counter(y_original))\n",
     "print(\"After SMOTE and Isolation Forest:\", Counter(y_clean))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Before TomekLinks: Counter({1: 7909, 0: 5178})\n",
+      "After TomekLinks: Counter({1: 6094, 0: 5178})\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\python\\lib\\site-packages\\sklearn\\base.py:474: FutureWarning: `BaseEstimator._validate_data` is deprecated in 1.6 and will be removed in 1.7. Use `sklearn.utils.validation.validate_data` instead. This function becomes public and is part of the scikit-learn developer API.\n",
+      "  warnings.warn(\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from imblearn.under_sampling import TomekLinks\n",
+    "from collections import Counter\n",
+    "\n",
+    "df = pd.read_csv(\"final_pet_food_dataset.csv\")\n",
+    "\n",
+    "# Prepare features and target\n",
+    "X = df.drop(columns=[\"pet_id\", \"customer_id\", \"pet_has_active_subscription\"])\n",
+    "y = df[\"pet_has_active_subscription\"]\n",
+    "\n",
+    "# Apply TomekLinks to remove overlap\n",
+    "tl = TomekLinks()\n",
+    "X_tomek, y_tomek = tl.fit_resample(X, y)\n",
+    "\n",
+    "# Compare class distributions\n",
+    "print(\"Before TomekLinks:\", Counter(y))\n",
+    "print(\"After TomekLinks:\", Counter(y_tomek))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To reduce class overlap and improve decision boundaries, we applied TomekLinks to the classification dataset. This method identified and removed overlapping instances between classes, reducing noise near class borders. The class distribution became slightly more balanced, and the cleaned dataset is now better suited for robust classification modeling."
+   ]
   }
  ],
  "metadata": {
