The last update

--- a/ex.1/classification dataset folder/AutoViz.ipynb
+++ b/ex.1/classification dataset folder/AutoViz.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "I tried to use this tool different ways, but without the result\n",
-    "I decided to use simular tools "
+    "I tried to use this tool different ways, but without the result.\n",
+    "I decided to use simular tools ."
    ]
   },
   {
