--- a/ex.1/classification dataset folder/dataprep_report.ipynb
+++ b/ex.1/classification dataset folder/dataprep_report.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As a Autoviz this tool also does not work"
+    "As a Autoviz this tool also does not work."
    ]
   },
   {
