--- a/ex.2/classification dataset/classification_model_comparison.ipynb
+++ b/ex.2/classification dataset/classification_model_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,6 @@
     }
    ],
    "source": [
-    "# 1. Import libraries\n",
     "import pandas as pd\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -59,19 +58,19 @@
     "from imblearn.over_sampling import SMOTE\n",
     "from sklearn.ensemble import IsolationForest\n",
     "\n",
-    "# 2. Load data\n",
+    "# Load data\n",
     "df = pd.read_csv(\"final_pet_food_dataset.csv\")\n",
     "\n",
-    "# 3. Prepare features and target\n",
+    "# Prepare features and target\n",
     "X = df.drop(columns=[\"pet_id\", \"customer_id\", \"pet_has_active_subscription\"])\n",
     "y = df[\"pet_has_active_subscription\"]\n",
     "\n",
-    "# 4. Split original data\n",
+    "# Split original data\n",
     "X_train_orig, X_test_orig, y_train_orig, y_test_orig = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=42, stratify=y\n",
     ")\n",
     "\n",
-    "# 5. Model A: Train on original data\n",
+    "# Model A: Train on original data\n",
     "clf_orig = RandomForestClassifier(random_state=42)\n",
     "clf_orig.fit(X_train_orig, y_train_orig)\n",
     "y_pred_orig = clf_orig.predict(X_test_orig)\n",
@@ -80,17 +79,17 @@
     "print(confusion_matrix(y_test_orig, y_pred_orig))\n",
     "print(classification_report(y_test_orig, y_pred_orig))\n",
     "\n",
-    "# 6. Apply SMOTE on training data\n",
+    "# Apply SMOTE on training data\n",
     "sm = SMOTE(random_state=42)\n",
     "X_train_smote, y_train_smote = sm.fit_resample(X_train_orig, y_train_orig)\n",
     "\n",
-    "# 7. Clean with Isolation Forest\n",
+    "# Clean with Isolation Forest\n",
     "iso = IsolationForest(contamination=0.01, random_state=42)\n",
     "mask = iso.fit_predict(X_train_smote)\n",
     "X_train_clean = X_train_smote[mask == 1]\n",
     "y_train_clean = y_train_smote[mask == 1]\n",
     "\n",
-    "# 8. Model B: Train on optimized data\n",
+    "# Model B: Train on optimized data\n",
     "clf_opt = RandomForestClassifier(random_state=42)\n",
     "clf_opt.fit(X_train_clean, y_train_clean)\n",
     "y_pred_opt = clf_opt.predict(X_test_orig)  # Use same test set for fair comparison\n",
