--- a/ex.2/regression dataset/regression_model_comparison.ipynb
+++ b/ex.2/regression dataset/regression_model_comparison.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,6 @@
     }
    ],
    "source": [
-    "# 1. Import libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
@@ -30,19 +29,18 @@
     "from sklearn.metrics import mean_absolute_error, mean_squared_error, r2_score\n",
     "from sklearn.ensemble import IsolationForest\n",
     "\n",
-    "# 2. Load dataset\n",
     "df = pd.read_csv(\"ship_fuel_efficiency_numeric.csv\")\n",
     "\n",
-    "# 3. Define features and target\n",
+    "# Define features and target\n",
     "X = df.drop(columns=[\"fuel_consumption\"])\n",
     "y = df[\"fuel_consumption\"]\n",
     "\n",
-    "# 4. Split original data\n",
+    "# Split original data\n",
     "X_train_orig, X_test_orig, y_train_orig, y_test_orig = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=42\n",
     ")\n",
     "\n",
-    "# 5. Model A - Original Data\n",
+    "# Model A - Original Data\n",
     "model_orig = RandomForestRegressor(random_state=42)\n",
     "model_orig.fit(X_train_orig, y_train_orig)\n",
     "y_pred_orig = model_orig.predict(X_test_orig)\n",
@@ -52,7 +50,7 @@
     "print(\"MAE:\", mean_absolute_error(y_test_orig, y_pred_orig))\n",
     "print(\"RMSE:\", np.sqrt(mean_squared_error(y_test_orig, y_pred_orig)))\n",
     "\n",
-    "# 6. Outlier removal with IQR\n",
+    "# Outlier removal with IQR\n",
     "Q1 = y.quantile(0.25)\n",
     "Q3 = y.quantile(0.75)\n",
     "IQR = Q3 - Q1\n",
@@ -62,18 +60,18 @@
     "X_filt = df_filtered.drop(columns=[\"fuel_consumption\"])\n",
     "y_filt = df_filtered[\"fuel_consumption\"]\n",
     "\n",
-    "# 7. Further outlier cleaning with Isolation Forest\n",
+    "# Further outlier cleaning with Isolation Forest\n",
     "iso = IsolationForest(contamination=0.01, random_state=42)\n",
     "mask = iso.fit_predict(X_filt)\n",
     "X_clean = X_filt[mask == 1]\n",
     "y_clean = y_filt[mask == 1]\n",
     "\n",
-    "# 8. Train-test split on cleaned data\n",
+    "# Train-test split on cleaned data\n",
     "X_train_clean, X_test_clean, y_train_clean, y_test_clean = train_test_split(\n",
     "    X_clean, y_clean, test_size=0.2, random_state=42\n",
     ")\n",
     "\n",
-    "# 9. Model B - Cleaned Data\n",
+    "# Model B - Cleaned Data\n",
     "model_clean = RandomForestRegressor(random_state=42)\n",
     "model_clean.fit(X_train_clean, y_train_clean)\n",
     "y_pred_clean = model_clean.predict(X_test_clean)\n",
