--- a/ex.2/regression dataset/regression_optimization.ipynb
+++ b/ex.2/regression dataset/regression_optimization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -101,27 +101,25 @@
     }
    ],
    "source": [
-    "# 1. Import libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import seaborn as sns\n",
     "import matplotlib.pyplot as plt\n",
     "from sklearn.ensemble import IsolationForest\n",
     "\n",
-    "# 2. Load dataset\n",
     "df = pd.read_csv(\"ship_fuel_efficiency_numeric.csv\")  # Adjust path if needed\n",
     "\n",
-    "# 3. Inspect dataset\n",
+    "# Inspect dataset\n",
     "print(\"Initial shape:\", df.shape)\n",
     "print(df.describe())\n",
     "\n",
-    "# 4. Visualize the distribution of the target variable\n",
+    "# Visualize the distribution of the target variable\n",
     "sns.histplot(df[\"fuel_consumption\"], kde=True, bins=50)\n",
     "plt.title(\"Target Distribution (fuel_consumption) - Before Optimization\")\n",
     "plt.xlabel(\"fuel_consumption\")\n",
     "plt.show()\n",
     "\n",
-    "# 5. Remove outliers using IQR\n",
+    "# Remove outliers using IQR\n",
     "Q1 = df[\"fuel_consumption\"].quantile(0.25)\n",
     "Q3 = df[\"fuel_consumption\"].quantile(0.75)\n",
     "IQR = Q3 - Q1\n",
@@ -131,7 +129,7 @@
     "                     (df[\"fuel_consumption\"] <= Q3 + 1.5 * IQR)]\n",
     "print(\"After IQR filtering:\", df_iqr_filtered.shape)\n",
     "\n",
-    "# 6. Optional: apply Isolation Forest\n",
+    "# Optional: apply Isolation Forest\n",
     "iso = IsolationForest(contamination=0.01, random_state=42)\n",
     "mask = iso.fit_predict(df_iqr_filtered)\n",
     "\n",
@@ -139,13 +137,13 @@
     "df_cleaned = df_iqr_filtered[mask == 1]\n",
     "print(\"After Isolation Forest:\", df_cleaned.shape)\n",
     "\n",
-    "# 7. Visualize cleaned distribution\n",
+    "# Visualize cleaned distribution\n",
     "sns.histplot(df_cleaned[\"fuel_consumption\"], kde=True, bins=50, color=\"green\")\n",
     "plt.title(\"Target Distribution (fuel_consumption) - After Optimization\")\n",
     "plt.xlabel(\"fuel_consumption\")\n",
     "plt.show()\n",
     "\n",
-    "# 8. Compare statistics before and after\n",
+    "# Compare statistics before and after\n",
     "print(\"\\nOriginal stats:\")\n",
     "print(df[\"fuel_consumption\"].describe())\n",
     "print(\"Variance:\", df[\"fuel_consumption\"].var())\n",
@@ -154,7 +152,7 @@
     "print(df_cleaned[\"fuel_consumption\"].describe())\n",
     "print(\"Variance:\", df_cleaned[\"fuel_consumption\"].var())\n",
     "\n",
-    "# 9. Save cleaned dataset\n",
+    "# Save cleaned dataset\n",
     "df_cleaned.to_csv(\"regression_dataset_cleaned.csv\", index=False)\n"
    ]
   },
@@ -303,7 +301,7 @@
     }
    ],
    "source": [
-    "# Step 1: Recreate the comparison table\n",
+    "# Recreate the comparison table\n",
     "regression_comparison = pd.DataFrame({\n",
     "    \"Model\": [\n",
     "        \"Original Dataset\",\n",
@@ -315,7 +313,7 @@
     "    \"RMSE\": [2050.29, 1587.32, 1512.76]\n",
     "})\n",
     "\n",
-    "# Step 2: Plot\n",
+    "# Plot\n",
     "metrics = [\"R²\", \"MAE\", \"RMSE\"]\n",
     "colors = [\"skyblue\", \"lightgreen\", \"salmon\"]\n",
     "\n",
@@ -359,19 +357,18 @@
    "source": [
     "from scipy.stats import zscore\n",
     "\n",
-    "# 1. Load the dataset\n",
     "df = pd.read_csv(\"ship_fuel_efficiency_numeric.csv\")\n",
     "\n",
-    "# 2. Calculate Z-scores\n",
+    "# Calculate Z-scores\n",
     "df['zscore_fc'] = zscore(df['fuel_consumption'])\n",
     "\n",
-    "# 3. Filter out outliers based on z-score threshold\n",
+    "# Filter out outliers based on z-score threshold\n",
     "df_z_filtered = df[(df['zscore_fc'].abs() <= 3)].copy()\n",
     "\n",
-    "# 4. Drop helper column\n",
+    "# Drop helper column\n",
     "df_z_filtered.drop(columns=['zscore_fc'], inplace=True)\n",
     "\n",
-    "# 5. Compare distribution before vs after\n",
+    "# Compare distribution before vs after\n",
     "plt.figure(figsize=(10, 4))\n",
     "\n",
     "plt.subplot(1, 2, 1)\n",
@@ -385,7 +382,7 @@
     "plt.tight_layout()\n",
     "plt.show()\n",
     "\n",
-    "# 6. Save filtered data if needed\n",
+    "# Save filtered data if needed\n",
     "df_z_filtered.to_csv(\"fuel_consumption_z_filtered.csv\", index=False)\n"
    ]
   },
@@ -398,7 +395,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -418,19 +415,19 @@
     "from sklearn.metrics import r2_score, mean_absolute_error, mean_squared_error\n",
     "import numpy as np\n",
     "\n",
-    "# 1. Define features and target\n",
+    "# Define features and target\n",
     "X = df.drop(columns=[\"fuel_consumption\"])\n",
     "y = df[\"fuel_consumption\"]\n",
     "\n",
-    "# 2. Split data\n",
+    "# Split data\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
-    "# 3. RANSAC model\n",
+    "# RANSAC model\n",
     "base_model = LinearRegression()\n",
     "ransac = RANSACRegressor(base_model, residual_threshold=500, random_state=42)\n",
     "ransac.fit(X_train, y_train)\n",
     "\n",
-    "# 4. Predict and evaluate\n",
+    "# Predict and evaluate\n",
     "y_pred_ransac = ransac.predict(X_test)\n",
     "\n",
     "print(\"RANSAC Regression:\")\n",
