--- a/ex.1/regression sataset folder/d_tale.ipynb
+++ b/ex.1/regression sataset folder/d_tale.ipynb
@@ -20,7 +20,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x1d13b2aab50>"
+       "<IPython.lib.display.IFrame at 0x16e522f6f70>"
       ]
      },
      "metadata": {},
